--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -17,17 +17,18 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.backgroundImage {
+  background-image: url('/back_CC0.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
